# CleanPay

./: COMMANDS.md  CURRENT_STATUS.md  CUSTOMER_MANAGEMENT_COMPLETE.md  CUSTOMER_MANAGEMENT_COMPLETE_V2.md  FEATURE_TRACKING.md  Features.md  Feedback.md  IMPLEMENTATION_SUMMARY.md  Implementation_Plan.md  LOGIN_GUIDE.md  NEXT_STEPS.md  QUICK_START.md  REACT_QUERY_IMPLEMENTATION.md  SESSION_COMPLETE.md  SYSTEM_ADMIN_IMPLEMENTATION.md
backend/: .env  .env.example  README.md  check_data.py  db.sqlite3  pyproject.toml  requirements.txt  seed_data.py  setup.ps1
backend/accounts/: admin.py  company_models.py  company_serializers.py  models.py  permissions.py  serializers.py  system_admin_views.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_role_name.py  0003_user_company_name_alter_role_name_company_and_more.py
backend/core/: settings.py  urls.py
backend/customers/: admin.py  models.py  portal_views.py  serializers.py  urls.py  views.py
backend/customers/migrations/: 0001_initial.py  0002_isukupay_updates.py  0003_customer_company.py
backend/operations/: admin.py  collector_views.py  models.py  serializers.py  urls.py  views.py
backend/operations/management/commands/: generate_operations_data.py  seed_operations.py
backend/operations/migrations/: 0001_initial.py  0002_schedule_waste_type.py  0003_collector_company_servicearea_company.py
frontend/: .env.example  DESIGN_SYSTEM.md  IMPLEMENTATION_COMPLETE.md  SETUP_GUIDE.md  index.html  package.json  pnpm-lock.yaml  setup.ps1
frontend/src/: App.tsx  index.css  main.tsx
(+85 files in other folders)
